--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,19 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
+                <plugin>
+            		<groupId>org.apache.maven.plugins</groupId>
+            		<artifactId>maven-surefire-plugin</artifactId>
+            		<version>2.5</version>
+            		<configuration>
+              			<parallel>true</parallel>
+              			<threadCount>10</threadCount>
+            			<systemPropertyVariables>
+                			<java.awt.headless>true</java.awt.headless>
+                			<log4j.configuration>${runtime.log4j.config}   </log4j.configuration>                                              
+            			</systemPropertyVariables>        
+            		</configuration>
+          		</plugin>
             </plugins>
         </pluginManagement>
     </build>
