--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
                     <configuration>
                         <sdk>
                             <platform>10</platform>
+                            <path>/Users/sumanta/android-sdks</path>
                         </sdk>
                         <emulator>
                             <!-- need to change the exsisting avd name -->
@@ -79,6 +80,27 @@
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.5</version>
                 </plugin>
+                
+                <!-- Cobertura code coverage plugin: Usage: mvn clean cobertura:cobertura -->
+                <plugin>  
+            		<groupId>org.codehaus.mojo</groupId>  
+            		<artifactId>cobertura-maven-plugin</artifactId>  
+            		<version>2.5.2</version>  
+            		<configuration>  
+                		<formats>  
+                    		<format>xml</format>  
+                		</formats>  
+            		</configuration>  
+            		<executions>  
+                		<execution>  
+                    		<phase>package</phase>  
+                    		<goals>  
+                        		<goal>cobertura</goal>  
+                    		</goals>  
+                		</execution>  
+            		</executions>  
+   				</plugin>
+   				   				
                 <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
@@ -106,19 +128,6 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-                <plugin>
-            		<groupId>org.apache.maven.plugins</groupId>
-            		<artifactId>maven-surefire-plugin</artifactId>
-            		<version>2.5</version>
-            		<configuration>
-              			<parallel>true</parallel>
-              			<threadCount>10</threadCount>
-            			<systemPropertyVariables>
-                			<java.awt.headless>true</java.awt.headless>
-                			<log4j.configuration>${runtime.log4j.config}   </log4j.configuration>                                              
-            			</systemPropertyVariables>        
-            		</configuration>
-          		</plugin>
             </plugins>
         </pluginManagement>
     </build>
