--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.8.1</version>
+                <!--<scope>test</scope>-->
             </dependency>
             <dependency>
                 <groupId>com.google.android</groupId>
@@ -100,7 +101,19 @@
                 		</execution>  
             		</executions>  
    				</plugin>
-   				   				
+   				<!-- maven-surefire-plugin to fetch results in JUbit format. http://maven.apache.org/surefire/maven-surefire-plugin/examples/junit.html -->
+                <plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-surefire-plugin</artifactId>
+    				<version>2.15</version>
+    				<dependencies>
+      					<dependency>
+        					<groupId>org.apache.maven.surefire</groupId>
+        					<artifactId>surefire-junit47</artifactId>
+        					<version>2.15</version>
+      					</dependency>
+    				</dependencies>
+  				</plugin>			
                 <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
