--- a/pom.xml
+++ b/pom.xml
@@ -50,15 +50,15 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <sdk>
-                            <platform>10</platform>
-                            <path>/Users/sumanta/android-sdks</path>
+                            <platform>17</platform>
+                            <path>/Users/cybage/android-sdks</path>
                         </sdk>
                         <emulator>
                             <!-- need to change the exsisting avd name -->
-                            <avd>Nexus4</avd>
+                            <avd>Android4.2</avd>
                             <wait>60000</wait>
                             <options>-no-window</options>
                         </emulator>
